# langchain-rag

./: .gitignore  LangChain_RAG.html  SETUP_GUIDE.md  main.py  pyproject.toml
data/: text_file.txt
